# stamp-rally

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml
.cursor/skills/kiro-spec-batch/: SKILL.md
.cursor/skills/kiro-spec-init/: SKILL.md
.cursor/skills/kiro-spec-quick/: SKILL.md
.kiro/specs/stamp-rally-mvp/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: auth_service.py  db.py  main.py  models.py  progress_service.py  stamp_service.py
backend/app/repositories/: participant_repo.py  stamp_record_repo.py  venue_repo.py
backend/app/routes/: auth_routes.py  stamp_routes.py
backend/scripts/: generate_qrcodes.py
backend/stamp_rally_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py
data/: facilities.csv
data/qrcodes/: manifest.csv
frontend/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/public/facilities/: README.md
frontend/src/: App.css  App.tsx  index.css
frontend/src/app/: auth-client.ts  stamp-client.ts  types.ts
frontend/src/features/auth/: AuthGate.tsx
frontend/src/features/stamp/: StampList.test.tsx  StampList.tsx  StampScanAction.tsx
