[project]
name = "stamp-rally-backend"
version = "0.1.0"
description = "Backend API for stamp rally"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "qrcode[pil]>=8.2",
  "pytest>=8.4.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0"
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"
